--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -94,17 +94,17 @@ jobs:
             - name: Get Old Version
               shell: bash
               run: |
-                  mvn clean install -DskipTests -P-format -q
-            #                  git clone https://github.com/IGinX-THU/IGinX.git
-            #                  cd IGinX
-            #                  mvn clean package -DskipTests -P-format -q
+                  mvn clean package -DskipTests -P-format -q
+                  git clone https://github.com/IGinX-THU/IGinX.git
+                  cd IGinX
+                  mvn clean package -DskipTests -P-format -q
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
-            #                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
@@ -143,13 +143,14 @@ jobs:
             - name: Install New IGinX with Maven
               shell: bash
               run: |
-                  mvn clean install -DskipTests -P-format -q
+                  mvn clean package -DskipTests -P-format -q
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Start New IGinX
               uses: ./.github/actions/iginxRunner
