--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -95,23 +95,23 @@ jobs:
               shell: bash
               run: |
                   mvn clean package -DskipTests -P-format -q
-            #                  git clone https://github.com/IGinX-THU/IGinX.git
-            #                  cd IGinX
-            #                  mvn clean package -DskipTests -P-format -q
+                  git clone https://github.com/IGinX-THU/IGinX.git
+                  cd IGinX
+                  mvn clean package -DskipTests -P-format -q
 
-            - name: Change IGinX config
+            - name: Change Old IGinX config
               uses: ./.github/actions/confWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
-            #                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
-              with:
-                  version: ${VERSION}
-                  if-test-udf: "true"
+            #              with:
+            #                  version: ${VERSION}
+            #                  if-test-udf: "true"
             #                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Run Regression Test on Old IGinX
@@ -147,7 +147,7 @@ jobs:
               run: |
                   mvn clean package -DskipTests -P-format -q
 
-            - name: Change IGinX config
+            - name: Change New IGinX config
               uses: ./.github/actions/confWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
@@ -156,9 +156,6 @@ jobs:
 
             - name: Start New IGinX
               uses: ./.github/actions/iginxRunner
-              with:
-                  version: ${VERSION}
-                  if-test-udf: "true"
 
             - name: Run Regression Test on New IGinX
               if: always()
