--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -23,13 +23,27 @@
             <artifactId>iginx-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service-annotations</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.auto.service</groupId>
+                            <artifactId>auto-service</artifactId>
+                            <version>1.1.1</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -64,8 +78,11 @@
                         <configuration>
                             <target>
                                 <copy todir="../core/target/iginx-core-${project.version}/lib/">
-                                    <fileset dir="${project.basedir}/target/">
+                                    <fileset dir="target/">
                                         <include name="iginx-optimizer-${project.version}.jar"/>
+                                    </fileset>
+                                    <fileset dir="../dependency/src/main/resources/">
+                                        <include name="iginx-optimizer-extension-${project.version}.jar"/>
                                     </fileset>
                                 </copy>
                             </target>
@@ -75,39 +92,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>java8</id>
-            <activation>
-                <jdk>[1.8,1.8.999]</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.wvengen</groupId>
-                        <artifactId>proguard-maven-plugin</artifactId>
-                        <version>2.6.0</version>
-                        <configuration>
-                            <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>
-                            <options>
-                                <option>-dontwarn</option>
-                                <option>-ignorewarnings</option>
-                            </options>
-                            <libs>
-                                <lib>${java.home}/lib/rt.jar</lib>
-                            </libs>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>proguard</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
