--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -144,7 +144,6 @@ runs:
           name: Set FragmentPruningByFilterRule OFF
           shell: bash
           run: |
-              echo "$PWD"
               if [ "$RUNNER_OS" == "Linux" ]; then
                   sudo sed -i 's/ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on/ruleBasedOptimizer=NotFilterRemoveRule=on/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
               elif [ "$RUNNER_OS" == "Windows" ]; then
@@ -206,7 +205,7 @@ runs:
                 exit 1
               fi
 
-#        - name: Copy Optimizer Jar
-#          shell: bash
-#          run: |
-#              cp -f "${{ inputs.Root-Dir-Path }}/optimizer/src/main/resources/iginx-optimizer-${VERSION}.jar" "${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/lib/"
+        - name: Copy Optimizer Jar
+          shell: bash
+          run: |
+              cp -f "${{ inputs.Root-Dir-Path }}/optimizer/src/main/resources/iginx-optimizer-${VERSION}.jar" "${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/lib/"
