--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -95,9 +95,9 @@ jobs:
               shell: bash
               run: |
                   mvn clean package -DskipTests -P-format -q
-                  git clone https://github.com/IGinX-THU/IGinX.git
-                  cd IGinX
-                  mvn clean package -DskipTests -P-format -q
+            #                  git clone https://github.com/IGinX-THU/IGinX.git
+            #                  cd IGinX
+            #                  mvn clean package -DskipTests -P-format -q
 
             - name: Change Old IGinX config
               uses: ./.github/actions/confWriter
@@ -105,10 +105,12 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
-                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
+            #                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
+            #              with:
+            #                Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Run Regression Test on Old IGinX
               if: always()
