don't add license for requirements.txt

--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,7 @@
                                 <header>LICENSE_HEADER</header>
                                 <excludes>
                                     <exclude>**/test/resources/**</exclude>
+                                    <exclude>**/requirements.txt</exclude>
                                 </excludes>
                             </licenseSet>
                         </licenseSets>
