--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,4 +92,5 @@ jobs:
               run: python setup.py sdist bdist_wheel
             - name: Publish package distributions to PyPI
               uses: pypa/gh-action-pypi-publish@release/v1
-              working-directory: session_py/iginx
+              with:
+                  packages-dir: session_py/iginx/dist
