--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -101,7 +101,7 @@
                                         <include name="iginx-optimizer-${project.version}.jar"/>
                                     </fileset>
                                     <fileset dir="../dependency/src/main/resources/">
-                                        <include name="iginx-optimizer-extension-0.7.0.jar"/>
+                                        <include name="iginx-optimizer-extension-*.jar"/>
                                     </fileset>
                                 </copy>
                             </target>
