--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -98,12 +98,6 @@ jobs:
                   mkdir IGinX/tpc
                   cp -r tpc/* IGinX/tpc/
                   cd IGinX
-                  ls
-                  cd "tpc/TPC-H V3.0.1/data"
-                  ls
-                  cd ..
-                  cd ..
-                  cd ..
                   mvn clean package -DskipTests -P-format -q
 
             - name: Change Old IGinX config
@@ -117,6 +111,7 @@ jobs:
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
               with:
+                  if-test-udf: "true"
                   Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
 
             - name: Run Regression Test on Old IGinX
