--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -102,7 +102,7 @@ jobs:
               uses: ./.github/actions/dbConfWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
-                  Root-Dir-Path: "${GITHUB_WORKSPACE}/IGinX"
+                  Root-Dir-Path: "IGinX"
 
             - name: Install Old IGinX with Maven
               shell: bash
@@ -124,13 +124,13 @@ jobs:
               if: always()
               shell: bash
               run: |
-                cd IGinX/core/target/iginx-core-${VERSION}
-                pwd
-                export IGINX_HOME=$PWD
-                echo "IGinX home path: $IGINX_HOME"
-                cd ..
-                chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
-                nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
+                  cd IGinX/core/target/iginx-core-${VERSION}
+                  pwd
+                  export IGINX_HOME=$PWD
+                  echo "IGinX home path: $IGINX_HOME"
+                  cd ..
+                  chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
+                  nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
 
             - name: Run Regression Test on Old IGinX
               if: always()
