--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -94,9 +94,7 @@ jobs:
               run: |
                   git clone https://github.com/IGinX-THU/IGinX.git
                   mkdir IGinX/tpc
-                  mkdir 'IGinX/tpc/TPC-H V3.0.1'
-                  mkdir 'IGinX/tpc/TPC-H V3.0.1/data'
-                  cp -r 'tpc/TPC-H V3.0.1/data/*' 'IGinX/tpc/TPC-H V3.0.1/data/'
+                  cp -r tpc/* IGinX/tpc/
                   ls -a 'IGinX/tpc/TPC-H V3.0.1/data'
 
             - name: Rewrite DB Conf in Old IGinX
