unify mvn command on format

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
               run: |
                   mvn deploy \
                       --batch-mode \
-                      -P !format \
+                      -P-format \
                       -DskipTests=true \
                       -Ddeploy.repo.dir=$(pwd)/pages
             - name: sync README.md and docs
