--- a/.github/workflows/assembly-test.yml
+++ b/.github/workflows/assembly-test.yml
@@ -40,7 +40,7 @@ jobs:
                   java: ${{ matrix.java }}
 
             - name: assembly include package
-              run: mvn clean package -D skipTests -P !format -P release
+              run: mvn clean package -D skipTests -P-format -P release
 
             - name: Setup Platform Dependence
               id: platform
@@ -77,7 +77,7 @@ jobs:
 
             - name: Run Tests
               shell: bash
-              run: mvn test -Dtest=${{ env.FUNCTEST }} -DfailIfNoTests=false -P !format
+              run: mvn test -Dtest=${{ env.FUNCTEST }} -DfailIfNoTests=false -P-format
 
             - name: Check Whether Logs Contains Error
               shell: bash
