--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -32,6 +32,7 @@ jobs:
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
+            os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
 #    remote-test:
 #        uses: ./.github/workflows/remote-test.yml
