--- a/dataSource/pom.xml
+++ b/dataSource/pom.xml
@@ -61,9 +61,20 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <configuration>
                         <appendAssemblyId>false</appendAssemblyId>
-                        <descriptors>
-                            <descriptor>${driver.basedir}/src/assembly/driver.xml</descriptor>
-                        </descriptors>
+                        <inlineDescriptors>
+                            <inlineDescriptor>
+                                <id>driver</id>
+                                <formats>
+                                    <format>dir</format>
+                                </formats>
+                                <includeBaseDirectory>false</includeBaseDirectory>
+                                <dependencySets>
+                                    <dependencySet>
+                                        <outputDirectory>driver/${project.artifactId}</outputDirectory>
+                                    </dependencySet>
+                                </dependencySets>
+                            </inlineDescriptor>
+                        </inlineDescriptors>
                     </configuration>
                     <executions>
                         <execution>
@@ -71,6 +82,27 @@
                                 <goal>single</goal>
                             </goals>
                             <phase>package</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.7</version>
+                    <executions>
+                        <execution>
+                            <id>copy-driver-into-core</id>
+                            <goals>
+                                <goal>run</goal>
+                            </goals>
+                            <phase>package</phase>
+                            <configuration>
+                                <target>
+                                    <copy todir="../../core/target/iginx-core-${project.version}/driver">
+                                        <fileset dir="target/${project.artifactId}-${project.version}/driver"/>
+                                    </copy>
+                                </target>
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
