--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -32,9 +32,7 @@
     <name>IGinX Dependency</name>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <profiles>
