--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -31,9 +31,7 @@
     <name>IGinX Optimizer</name>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
     <dependencies>
