--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,14 @@
                 <artifactId>jetcd-core</artifactId>
                 <version>0.5.11</version>
             </dependency>
+            <!-- jetcd-core requires grpc version not exceeding 1.57 -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-bom</artifactId>
+                <version>1.57.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>com.influxdb</groupId>
                 <artifactId>influxdb-client-java</artifactId>
