--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -24,6 +24,7 @@ jobs:
     standalone-test:
         uses: ./.github/workflows/standalone-test.yml
         with:
+            os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
     #    standalone-test-pushdown:
     #        uses: ./.github/workflows/standalone-test-pushdown.yml
