--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -21,11 +21,10 @@ jobs:
     #        uses: ./.github/workflows/case-regression.yml
     #        with:
     #            metadata-matrix: '["zookeeper"]'
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            os-matrix: '["ubuntu-latest"]'
-            metadata-matrix: '["zookeeper"]'
+    #    standalone-test:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
     #    standalone-test-pushdown:
     #        uses: ./.github/workflows/standalone-test-pushdown.yml
     #        with:
