--- a/.github/actions/service/postgresql/action.yml
+++ b/.github/actions/service/postgresql/action.yml
@@ -63,6 +63,7 @@ runs:
                 echo "port = ${port}" >> "${PGCONF}"
                 echo "unix_socket_directories = ''" >> "${PGCONF}"
                 echo "fsync = off" >> "${PGCONF}"
+                echo "max_connections = 200" >> "${PGCONF}"
 
                 pg_ctl start --pgdata="${PGDATA}" 
               done
